--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,13 @@
   <body>
     <form class="search-form" id="search-form">
       <input
+        class="search-input"
         type="text"
         name="searchQuery"
         autocomplete="off"
         placeholder="Search images..."
       />
-      <button type="submit">Search</button>
+      <button class="search-btn" type="submit">Search</button>
     </form>
     <div class="gallery"></div>
     <button type="button" class="load-more is-hidden">Load more</button>
