--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <title>Homework 10</title>
   </head>
   <body>
-    <form class="search-form" id="search-form">
+    <form id="search-form">
       <input
         class="search-input"
         type="text"
